<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_over_swipe_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.durian.demo.presentation.overview.OverViewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.durian.demo.presentation.overview.OverViewFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10dp"
                    android:text="@string/over_view_popular_repo"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/id_over_view_popular_repo_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10dp"
                    android:text="@string/over_view_contributions"/>

                <WebView
                    android:id="@+id/id_overview_contribution_web_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_8dp"
                    android:layout_marginRight="@dimen/spacing_8dp"
                    android:layout_marginTop="@dimen/spacing_10dp">
                </WebView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10dp"
                    android:text="@string/over_view_events"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/id_over_view_events_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>